# k-exp

./: .gitignore  README.md  camera_rect.json  dashboard_layout_client.json  dashboard_layout_server.json  dashboard_layouts.lnk  pyproject.toml  setup.py
.github/workflows/: documentation.yml
bat/: start_artiq_cmd.bat  start_artiq_cmd_kjam.bat  start_artiq_dashboard.bat  start_artiq_dashboard_only.bat  start_artiq_master_only.bat  start_dds_gui.bat
control/dds_cmd/: SetDDS_cmd.py  dds_cmd.py
control/dds_gui/: dds_gui.py  make_dds_expt.py
db/: device_db.py
docs/: conf.py  index.rst  kexp.analysis.image_processing.rst  kexp.analysis.rst  kexp.base.rst  kexp.base.sub.rst  kexp.control.artiq.rst  kexp.control.cameras.rst  kexp.control.misc.rst  kexp.control.rst  kexp.experiments.rst  kexp.rst  kexp.util.artiq.rst  kexp.util.data.rst  kexp.util.db.rst  kexp.util.guis.dds.rst  kexp.util.live_od.rst  kexp.util.rst
docs/source/: conf.py  index.rst
expt/: DDS.py  SetDDS_cmd.py  SetDDS_master.py  SetDDSmaster.py  mot_tof.py  set_dds_master.py  temp.py
expt/depreciated/: DDS_off.py
kexp/: __init__.py
kexp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
kexp/_bat/: ODT_picomotor_control.bat  _restart_all_tray_launcher_scripts.bat  _start_all_tray_launcher_scripts.bat  _terminate_tray_launcher_scripts.bat  als_gui.bat  als_server.bat  background_field.bat  basler_gui.bat  basler_server.bat  bristol_wavemeter_gui.bat  bristol_wavemeter_server.bat  camera_mother.bat  camera_server.bat  client_dashboard.bat  dac_gui.bat  data_browser.bat  dc205_server.bat  (+36 more)
(+1581 files in other folders)
