# pyproject.toml
[project]
name = "kexp"
version = "0.0.1"
description = "Weld Lab K Experiment Repo"
authors = [
    {name = "jpagett", email = "pagett.jared@gmail.com"},
    {name = "Jared Pagett", email = "pagett.jared@gmail.com"},
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/ucsb-amo/k-exp"
[tool.setuptools.packages.find]
where = ["."] # Look for packages in the current directory
[tool.pdm]
distribution = false
